[package]
name = "sbdb"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "helping out your filesystem"
repository = "https://github.com/wilgaboury/sbdb"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
reflink-copy = "=0.1.27"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rand = "0.8"
path-dsl = "0.6.1"