[package]
name = "sbdb"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "helping out your filesystem"
repository = "https://github.com/wilgaboury/sbdb"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
reflink-copy = "=0.1.27"
rand = "0.9.2"

[dev-dependencies]
path-dsl = "0.6.1"